[gd_scene load_steps=12 format=4 uid="uid://b06h2t1k3tbnx"]

[ext_resource type="Script" path="res://overworld.gd" id="1_1dfiy"]
[ext_resource type="Texture2D" uid="uid://c6m8jpts0lutd" path="res://isometric vineyard tiles.png" id="1_td0l8"]
[ext_resource type="Script" path="res://fields.gd" id="2_bshk6"]
[ext_resource type="Texture2D" uid="uid://bigfcnh0ogmss" path="res://monk_temp.png" id="4_rjitj"]
[ext_resource type="Script" path="res://field_monk_layer.gd" id="4_rv2cw"]
[ext_resource type="Script" path="res://stats.gd" id="5_qha64"]
[ext_resource type="PackedScene" uid="uid://c4i8eaay6tnq8" path="res://RightSidePanel.tscn" id="6_lcqe8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6xn64"]
texture = ExtResource("1_td0l8")
texture_region_size = Vector2i(64, 32)
0:1/0 = 0
0:1/0/custom_data_0 = "empty"
1:1/0 = 0
1:1/0/custom_data_0 = "field"
2:1/0 = 0
2:1/0/custom_data_0 = "tilled"
3:1/0 = 0
3:1/0/custom_data_0 = "winter"
4:0/size_in_atlas = Vector2i(1, 2)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, 16)
4:0/0/custom_data_0 = "monestary"

[sub_resource type="TileSet" id="TileSet_o5v2o"]
tile_shape = 1
tile_layout = 4
tile_size = Vector2i(64, 32)
custom_data_layer_0/name = "type"
custom_data_layer_0/type = 4
sources/0 = SubResource("TileSetAtlasSource_6xn64")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wxmww"]
texture = ExtResource("4_rjitj")
texture_region_size = Vector2i(64, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 16)

[sub_resource type="TileSet" id="TileSet_cjtgk"]
tile_shape = 1
tile_layout = 4
tile_size = Vector2i(64, 32)
sources/0 = SubResource("TileSetAtlasSource_wxmww")

[node name="Overworld" type="Node2D"]
script = ExtResource("1_1dfiy")

[node name="Fields" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAEAAQAAAAAAAEAAAADAAMAAAAAAAEAAAACAAIAAAAAAAEAAAABAAEAAAAAAAEAAAAAAAEAAAAAAAEAAAABAAIAAAAAAAEAAAABAAMAAAAAAAEAAAACAAMAAAAAAAEAAAADAAQAAAAEAAAAAAAAAAIAAAABAAEAAAD//wEAAAAAAAEAAAD//wIAAAABAAEAAAACAAQAAAAAAAEAAAACAAUAAAAAAAEAAAABAAQAAAAAAAEAAAAAAAMAAAACAAEAAAD+/wMAAAAAAAEAAAD//wMAAAACAAEAAAAAAAQAAAAAAAEAAAABAAUAAAAAAAEAAAAAAAUAAAACAAEAAAD+/wIAAAAAAAEAAAD//wQAAAAAAAEAAAAAAAYAAAABAAEAAAAAAAcAAAABAAEAAAABAAcAAAAAAAEAAAD//wUAAAAAAAEAAAD+/wQAAAAAAAEAAAD9/wMAAAAAAAEAAAABAAYAAAAAAAEAAAD9/wUAAAAAAAEAAAD+/wYAAAABAAEAAAD//wYAAAABAAEAAAD+/wUAAAAAAAEAAAD9/wQAAAAAAAEAAAD//wcAAAABAAEAAAD8/wYAAAAAAAEAAAD9/wcAAAABAAEAAAD+/wgAAAAAAAEAAAD+/wkAAAAAAAEAAAD9/wgAAAAAAAEAAAD7/wYAAAAAAAEAAAD9/wYAAAAAAAEAAAD+/wcAAAABAAEAAAD//wgAAAAAAAEAAAD8/wQAAAAAAAEAAAD8/wMAAAAAAAEAAAD8/wUAAAAAAAEAAAD7/wUAAAAAAAEAAAD6/wUAAAAAAAEAAAD6/wYAAAAAAAEAAAD8/wcAAAAAAAEAAAD//wkAAAAAAAEAAAD//woAAAAAAAEAAAAAAAkAAAAAAAEAAAAAAAgAAAAAAAEAAAABAAgAAAAAAAEAAAACAAcAAAAAAAEAAAACAAYAAAAAAAEAAAADAAYAAAAAAAEAAAADAAUAAAAAAAEAAAAEAAUAAAAAAAEAAAD+/wsAAAAAAAEAAAD+/woAAAAAAAEAAAD9/woAAAAAAAEAAAD9/wkAAAAAAAEAAAD8/wkAAAAAAAEAAAD8/wgAAAAAAAEAAAD7/wgAAAAAAAEAAAD7/wcAAAAAAAEAAAD6/wcAAAAAAAEAAAD5/wcAAAAAAAEAAAD5/wgAAAAAAAEAAAD5/wkAAAAAAAEAAAD6/wkAAAAAAAEAAAD6/woAAAAAAAEAAAD7/woAAAAAAAEAAAD7/wsAAAAAAAEAAAD8/wwAAAAAAAEAAAD9/w0AAAAAAAEAAAD8/wsAAAAAAAEAAAD8/woAAAAAAAEAAAD7/wkAAAAAAAEAAAD6/wgAAAAAAAEAAAD9/wsAAAAAAAEAAAD9/wwAAAAAAAEAAAD4/wgAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_o5v2o")
script = ExtResource("2_bshk6")

[node name="FieldMonkLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_cjtgk")
script = ExtResource("4_rv2cw")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="RightP" parent="HUD" instance=ExtResource("6_lcqe8")]

[node name="LeftP" type="Panel" parent="HUD"]
offset_left = 6.0
offset_top = 296.0
offset_right = 638.0
offset_bottom = 360.0

[node name="Stats" type="RichTextLabel" parent="HUD/LeftP"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_qha64")
